--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Reveal Bootstrap Template</title>
+  <title>ChargeXO</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/favicon.ico" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -174,7 +174,7 @@
                   during the electrochemical reaction.</p>
               </div>
             </div>
-            <div class="col-lg-4"><img src="/img/CellTechnology.gif" style="
+            <div class="col-lg-4"><img src="img/CellTechnology.gif" style="
               width: inherit;
           "></img></div>
             <div class="col-lg-4">
@@ -200,7 +200,7 @@
               <div class="box wow fadeInLeft" data-wow-delay="0.2s">
 
                 <h4 class="title"><a href="">LFP</a></h4>
-                <img src="/img/LFP.png" class="img-thumbnail" style="
+                <img src="img/LFP.png" class="img-thumbnail" style="
               width: inherit;
           "></img>
               </div>
@@ -221,7 +221,7 @@
               <div class="box wow fadeInRight" data-wow-delay="0.2s">
 
                 <h4 class="title"><a href="">NCM<sub>111</sub></a></h4>
-                <img src="/img/NMC.png" class="img-thumbnail" style="
+                <img src="img/NMC.png" class="img-thumbnail" style="
                 width: inherit;
             "></img>
               </div>
@@ -243,7 +243,7 @@
           <h2>Cell Manufacturing</h2>
         </div>
         <div class="zoomin">
-          <img class="rounded mx-auto d-block cellManu" src="/img/CellManufacturing.png" />
+          <img class="rounded mx-auto d-block cellManu" src="img/CellManufacturing.png" />
         </div>
 
       </div>
