--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h2 class="sense">SENSE OF SENSIBILITY</h2>
+      <h2 class="sense">SENSE OF SUSTAINABILITY</h2>
       <!-- <div>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
         <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
